@startuml
' Cấu hình giao diện
hide circle
skinparam linetype ortho
skinparam backgroundColor white
skinparam roundcorner 5
skinparam class {
    BackgroundColor LightCyan
    BorderColor Blue
    ArrowColor Blue
}

legend right
  | Màu sắc | Loại dữ liệu |
  |<#LightCyan>| Dữ liệu Quan hệ (Relational DB) |
  |<#MistyRose>| Dữ liệu Chuỗi thời gian (Hypertable) |
endlegend

' --- CÁC BẢNG DỮ LIỆU QUAN HỆ (RELATIONAL DATA) ---

entity "Users" as users {
  * id : UUID <<PK>>
  --
  * username : VARCHAR(50) <<UNIQUE>>
  * email : VARCHAR(100) <<UNIQUE>>
  * password : VARCHAR(255)
  * role : VARCHAR(20) [ADMIN, FARMER]
  created_at : TIMESTAMP
}

entity "Notifications" as notifications {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * message : TEXT
  is_read : BOOLEAN
  created_at : TIMESTAMP
}

entity "Farms" as farms {
  * id : UUID <<PK>>
  --
  * owner_id : UUID <<FK>>
  * name : VARCHAR(100)
  location : VARCHAR(255)
  created_at : TIMESTAMP
}

entity "Device_Models (Catalog Thiết bị)" as models {
  * id : UUID <<PK>>
  --
  * model_name : VARCHAR(100)
  * device_type : VARCHAR(20) [SENSOR, ACTUATOR]
  * metric_type : VARCHAR(50) [TEMP, HUMIDITY, PUMP...]
  manufacturer : VARCHAR(100)
}

entity "Devices (Thiết bị thực tế)" as devices {
  * id : UUID <<PK>>
  --
  * farm_id : UUID <<FK>>
  * model_id : UUID <<FK>>
  * name : VARCHAR(100)
  * status : VARCHAR(20) [PENDING, ACTIVE, REJECTED]
  adafruit_feed_key : VARCHAR(100) <<Nullable>>
  --
  connection_status : VARCHAR(20) [ONLINE, OFFLINE]
  last_seen : TIMESTAMP
  operating_mode : VARCHAR(20) [AUTO, MANUAL]
}

entity "Rules (Tự động hóa)" as rules {
  * id : UUID <<PK>>
  --
  * farm_id : UUID <<FK>>
  * rule_name : VARCHAR(100)
  * rule_type : VARCHAR(20) [CONDITION, SCHEDULE]
  trigger_device_id : UUID <<FK>> <<Nullable>>
  operator : VARCHAR(5) [>, <, ==] <<Nullable>>
  threshold_value : FLOAT <<Nullable>>
  cron_expression : VARCHAR(100) <<Nullable>>
  * action_device_id : UUID <<FK>>
  * action_command : VARCHAR(20) [ON, OFF]
  is_active : BOOLEAN
}

entity "AI_Analysis_Logs" as ai_logs {
  * id : UUID <<PK>>
  --
  * farm_id : UUID <<FK>>
  * image_url : TEXT
  * analysis_type : VARCHAR(20) [LEAF_DISEASE, FRUIT_SORTING]
  result_label : VARCHAR(100)
  confidence_score : FLOAT
  analyzed_at : TIMESTAMP
}

' --- BẢNG DỮ LIỆU CHUỖI THỜI GIAN (TIME-SERIES) ---

entity "Sensor_Data_Hypertables" as sensor_data #MistyRose {
  * time : TIMESTAMPTZ <<PK>>
  * device_id : UUID <<PK, FK>>
  --
  * metric_type : VARCHAR(50)
  * value : FLOAT
}

' --- CÁC MỐI QUAN HỆ (RELATIONSHIPS) ---

users "1" ||..o{ "0..N" farms : "Sở hữu"
users "1" ||..o{ "0..N" notifications : "Nhận"

models "1" ||..o{ "0..N" devices : "Được sử dụng"
farms "1" ||..o{ "0..N" devices : "Chứa"
farms "1" ||..o{ "0..N" rules : "Thiết lập"
farms "1" ||..o{ "0..N" ai_logs : "Lưu lịch sử"

devices "1" ||..o{ "0..N" sensor_data : "Sinh ra"
devices "1" ||..o{ "0..N" rules : "trigger_device_id"
devices "1" ||..o{ "0..N" rules : "action_device_id"
@enduml